--- a/templates/personal_account/referral.html
+++ b/templates/personal_account/referral.html
@@ -21,7 +21,7 @@
             {% endif %}
 
             <div class="referral-section">
-                <p>Ваша партнёрская ссылка для привлечения новых участников:</p>
+                <p>Ваша партнёрская ссылка:</p>
                 <div class="link-container">
                     <div class="input-group">
                         <input type="text" 
